fix footer positiioning on firefox

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -93,5 +93,6 @@ p.heavy {
 .fixed-bottom {
     position: fixed;
     bottom: 0;
+    left: 0;
     z-index: 15;
 }
